Fix the issues with Twitter footer widget and justify text alignment

--- a/_/components/less/style.less
+++ b/_/components/less/style.less
@@ -518,6 +518,7 @@ h4.subscribe-heading {
   dd {
     margin-left:30px;
     color:#7D7D7D;
+    text-align: justify;
 
     a {
       color:#15B1F3;
